<resources>
    <string name="app_name">Firebase Chat App</string>
    <string name="log_in">Log in</string>
    <string name="enter_password">Enter password</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_your_email_and_password_to_log_in">Enter your email and password to login</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message">Message</string>
</resources>